# bingle

./: .travis.yml  README.md  appimage.yml  meson.build
data/: app.gresource.xml  io.github.coslyk.bingle.appdata.xml  io.github.coslyk.bingle.desktop
po/: POTFILES  io.github.coslyk.bingle.pot  zh-CN.mo  zh-CN.po  zh_CN.mo  zh_CN.po
src/: AboutDialog.vala  Application.vala  BingAPI.vala  DesktopService.vala  Gallery.vala  ImageData.vala  ImageViewer.vala  MainWindow.vala  Provider.vala
